modify .gitconfig & .vimrc
color and aliase add in .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,16 +1,49 @@
+
+[user]
+	name = masao takado
+	email = masao.0408@gmail.com
+
+[color]
+    #以下のコマンドは自動で色をつける
+    status = auto
+    diff = auto
+    branch = auto
+    interactive = auto
+    grep = auto
+
 [core]
 	excludesfile = /Users/mac/.gitignore_global
 	editor = vim
 	pager = less
 	quotepath = false
+
+[http]
+	sslVerify = false
+
+[alias]
+	st = status -sb
+	co = checkout
+	ft = fetch
+	sh = show
+    rbm = rebase
+    ad = add
+    ci = commit
+    cam = commit -a --amend
+    
+    #branch関連
+    br = branch
+    ba = branch -a
+    bm = branch --merged    # merge済みのbranchを表示
+    bn = branch --no-merged # mergeしていないbranchを表示
+
+    # logをtree表示
+    hi = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(bold yellow)― %an%C(reset)%C(bold red)%d%C(reset)' --abbrev-commit --date=relative
+    hist = log --pretty=format:'%C(red reverse)%d%Creset%C(white reverse) %h% Creset %C(green reverse) %an %Creset %C(cyan)%ar%Creset%n%C(white bold)%w(80)%s%Creset%n%n%w(80,2,2)%b'
+
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
+
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
-[http]
-	sslVerify = false
-[user]
-	name = masao takado
-	email = masao.0408@gmail.com
